--- a/.github/workflows/requests$html.yaml
+++ b/.github/workflows/requests$html.yaml
@@ -1,7 +1,8 @@
 name: '3.requests::test_html'
 
 on:
-  push:
+  pull-request:
+    types: [ opened, edited, synchronize ]
     paths:
       - './tests/main/s3/test_requests.py'
       - '.github/workflows/requests$html.yaml'
